--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "cache-manager-redis-store": "^1.2.0",
+    "pify": "^3.0.0",
     "redis": "^2.7.1"
   },
   "peerDependencies": {
