--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "claypot-redis-plugin",
   "description": "Claypot redis plugin",
-  "version": "0.0.1-0",
+  "version": "0.0.2",
   "main": "lib/index",
   "files": [
     "LICENSE.md",
