--- a/package.json
+++ b/package.json
@@ -23,9 +23,8 @@
     "node": ">= 7.6.0"
   },
   "dependencies": {
-    "cache-manager-redis-store": "^1.2.0",
-    "pify": "^3.0.0",
-    "redis": "^2.7.1"
+    "cache-manager-ioredis": "^1.0.1",
+    "ioredis": "^3.2.1"
   },
   "peerDependencies": {
     "claypot": "^0.0.0-beta.31"
