--- a/package.json
+++ b/package.json
@@ -27,12 +27,11 @@
     "ioredis": "^3.2.1"
   },
   "peerDependencies": {
-    "claypot": "^0.0.0-beta.55"
+    "claypot": "^0.0.0"
   },
   "devDependencies": {
     "babel-cli": "^6.11.4",
     "babel-core": "^6.13.2",
-    "babel-eslint": "^7.2.3",
     "babel-jest": "^19.0.0",
     "babel-plugin-transform-es2015-destructuring": "^6.19.0",
     "babel-plugin-transform-es2015-modules-commonjs": "^6.18.0",
@@ -41,20 +40,16 @@
     "babel-preset-stage-0-without-async": "^1.0.0",
     "babel-register": "^6.11.6",
     "babel-register-cli": "^4.0.0",
-    "claypot": "^0.0.0-beta.55",
+    "claypot": "^0.0.0",
     "co-body": "^4.2.0",
     "cross-env": "^4.0.0",
-    "eslint": "^3.19.0",
-    "eslint-config-standard": "^10.2.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jest": "^19.0.1",
-    "eslint-plugin-node": "^4.2.2",
-    "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^3.0.1",
+    "eslint": "^4.16.0",
+    "eslint-config-cantonjs": "^0.2.0",
     "get-my-ip": "0.0.1",
     "jest": "^19.0.2",
     "kapok-js": "^0.2.1",
     "mkdirp": "^0.5.1",
+    "prettier-eslint-cli": "^4.7.0",
     "qs": "^6.3.0",
     "rimraf": "^2.5.4"
   },
