--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
 	"name": "claypot-redis-plugin",
 	"description": "Claypot redis plugin",
-	"version": "0.3.0",
+	"version": "0.3.1",
 	"main": "lib/index",
-	"files": ["LICENSE.md", "README.md", "lib"],
+	"files": [
+		"LICENSE.md",
+		"README.md",
+		"lib"
+	],
 	"scripts": {
 		"start": "yarn test --watchAll",
 		"test": "jest --runInBand",
@@ -50,7 +54,12 @@
 		"rimraf": "^2.5.4"
 	},
 	"jest": {
-		"collectCoverageFrom": ["src/**/*.js"],
-		"modulePathIgnorePatterns": ["node_modules", "lib"]
+		"collectCoverageFrom": [
+			"src/**/*.js"
+		],
+		"modulePathIgnorePatterns": [
+			"node_modules",
+			"lib"
+		]
 	}
 }
